ci(): update wording

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
     <div>
-        <h1>Gulp Starter using Babel with ES Module</h1>
+        <h1>Gulp Starter using Babel with ES Modules</h1>
         <p>Serving files from: <code>./public</code></p>
         <p>Javascript is running and return <code><span id="hello"></span></code></p>
     </div>
